--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 project(test CXX)
 
 set(CMAKE_CROSSCOMPILING "True")
-set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_CXX_STANDARD 20)
 
 file(GLOB_RECURSE SOURCES
       micrograd/*.cpp
       micrograd/**/*.cpp
-      test/**.cpp
-      # examples/**.cpp
+      # test/**.cpp
+      examples/**.cpp
 )
 file(GLOB_RECURSE HEADERS
       micrograd/*hpp
